# codyze

./: .classpath  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .project  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  build.gradle.kts  codecov.yml  demo.sh  detekt.yml  docker-compose.yaml  formatter-settings.xml  gradle.properties  index.html  jitpack.yml  mkdocs.yml  publish_to_gh_pages.sh  renovate.json  settings.gradle.kts  sitemap.xml  sonar.crt  updateSARIF.md
.github/: renovate.json
Codyze/: index.html
Coko/: index.html
Plugins/: index.html
buildSrc/: build.gradle.kts  settings.gradle.kts
code-coverage-report/: build.gradle.kts
codyze/: settings.gradle.kts
codyze-aggregator/: build.gradle.kts
codyze-cli/: build.gradle.kts  config-cryptomator.json  config-custom-2.json  config-custom.json  config.json  go.json
codyze-core/: build.gradle.kts
codyze-plugins/: build.gradle.kts
codyze-v2/: .dockerignore  Dockerfile  LICENSE  README.md  build.gradle.kts  settings.gradle.kts
codyze-v2/src/test/resources/botan_rule_tr_test/: .gitignore  2_1_2_1_02.cpp  2_1_2_3_01.cpp  3_3_02.cpp  4_01.cpp  5_3_01.cpp  5_4_3_01.cpp  7_2_2_1_01.cpp  CMakeLists.txt
codyze-v3/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
codyze_v2/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
codyze_v3/: .gitignore  README.md  codyze-config-schema.json  gradle.properties  settings.gradle.kts  todo
contributors/: index.html
docs/: .gitignore  .gitmodules  CNAME  Dockerfile  README.md  amd64.Dockerfile  config.toml  (+4 more)
(+2717 files in other folders)
